bugfix: delete local image failed

--- a/option.html
+++ b/option.html
@@ -45,7 +45,7 @@
     </div>
     <div class="box">
       <h3>上传历史</h3>
-      <div class="tip"><span class="emoji">💌</span>左击图片可以查看原图，右击图片可以删除本地图片！</div>
+      <div class="tip"><span class="emoji">💌</span>左击图片查看原图，右击图片删除本地图片！</div>
       <div class="files"></div>
     </div>
   </div>
