--- a/app.html
+++ b/app.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Qiniu Kodo</title>
   <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
 
