--- a/app.html
+++ b/app.html
@@ -37,10 +37,9 @@
     <div style="margin-top: 20px;">
       <h3>上传结果：</h3>
       <div class="tip"><span class="emoji">⛳️</span>点击图片即可复制链接！</div>
-      <div class="files"></div>
+      <div class="files" id="upload-files"></div>
     </div>
   </div>
-  <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/CryptoJS.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
