feat: support copy upload

--- a/app.html
+++ b/app.html
@@ -24,9 +24,9 @@
     <input name="file" id="input" type="file" accept="*" multiple style="display: none;">
 
     <div style="margin: 10px 0; display: flex; justify-content: space-between; align-items: center;">
-      <div class="tip"><span class="emoji">📌</span>单击或者拖拽图片到这里</div>
+      <div class="tip"><span class="emoji">📌</span>单击 / 拖拽 / 复制图片到这里</div>
       <div>
-        <button id="btn-option" class="btn btn-default" type="button">设置/历史</button>
+        <button id="btn-option" class="btn btn-default" type="button">设置 / 历史</button>
       </div>
     </div>
     <div class="single-model">
