上传页面显示默认空间，方便查看

--- a/app.html
+++ b/app.html
@@ -26,6 +26,7 @@
     <div style="margin: 10px 0; display: flex; justify-content: space-between; align-items: center;">
       <div class="tip"><span class="emoji">📌</span>单击 / 拖拽 / 复制图片到这里</div>
       <div>
+        <span style="margin-right: 20px; color: #259edd; font-weight: 500; font-size: 16px;">当前空间：<span id="bucketName"></span></span>
         <button id="btn-option" class="btn btn-default" type="button">设置 / 历史</button>
       </div>
     </div>
